# Vision3D

./: .gitignore  .pre-commit-config.yaml  README.md  commands.sh  pyproject.toml  requirements.txt  train.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
configs/: train.yaml
configs/dataset/: dummy.yaml  nuscenes.yaml  nuscenes_mini.yaml
configs/experiment/: default.yaml
configs/model/: bevformer.yaml
docs/: configs.md  data_format.md  dataloading.md  development.md  installation.md  models.md
scripts/: __init__.py  check_quality.sh  convert_nuscenes.py  convert_nuscenes_mini.sh  generate_dummy_data.sh  generate_dummy_dataset.py  setup_dev.sh  train_dummy.sh  train_nuscenes.sh
src/vision3d/config/: __init__.py  schema.py
src/vision3d/core/: __init__.py  evaluators.py  losses.py  matchers.py
src/vision3d/data/: __init__.py  augmentations.py  dataset.py  filters.py  loaders.py
src/vision3d/engine/: __init__.py  lit_module.py
src/vision3d/models/: __init__.py  bevformer.py
src/vision3d/models/backbones/: __init__.py  resnet.py
src/vision3d/models/encoders/: __init__.py  bev_encoder.py
src/vision3d/models/heads/: __init__.py  detection_head.py
src/vision3d/models/necks/: __init__.py  fpn.py
src/vision3d/utils/: __init__.py  foxglove.py  geometry.py
tests/: test_config_schema.py  test_core_evaluators.py  test_core_matchers.py  test_data_augmentations.py  test_integration.py  test_models_encoders.py  test_models_heads.py  test_scripts_dummy.py  test_skeletons.py  test_utils_foxglove.py
tests/config/: test_schema.py
tests/core/: test_losses.py
tests/data/: test_dataset.py  test_filters.py  test_loaders.py
tests/integration/: helpers.py  test_backbone_neck.py  test_bevformer_model.py  test_data_pipeline.py  test_dataloader_model.py  test_interface_edge_cases.py  test_lightning_module.py  test_regression.py  test_training_pipeline.py  test_validation_pipeline.py
tests/models/backbones/: test_backbones.py
tests/models/necks/: test_necks.py
tests/tools/: test_dummy.py
tests/utils/: test_geometry.py
tools/: __init__.py  convert_nuscenes.py  generate_dummy_dataset.py  train.py
